Stop HostServiceTest assuming a POSIX path separator
aListKeyHoldingSomethingOtherThanStringsIsReadAnyway hands stringsOf() a
Path and expected the literal "/tmp/a.png" back. Path.toString() renders
with the platform's separator, so on Windows the call correctly returns
"\tmp\a.png" and the test failed — the only failure in the suite there.

stringsOf() is doing the right thing, so the expectation moves to
path.toString(). What is under test is that a non-String element gets
rendered at all; how a Path renders is the platform's business.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>